--- a/MovieRental/Views/Movies/MovieForm.cshtml
+++ b/MovieRental/Views/Movies/MovieForm.cshtml
@@ -1,11 +1,12 @@
 ﻿@model MovieRental.ViewModels.MovieFormViewModel
 
 @{
+    var title = (Model.Movie == null) ? "New Movie" : "Edit Movie";
     ViewBag.Title = "MovieForm";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>New Movie</h2>
+<h2>@title</h2>
 
 @using (Html.BeginForm("Save", "Movies"))
 {
@@ -15,7 +16,7 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.ReleaseDate)
-        @Html.TextBoxFor(m => m.Movie.ReleaseDate, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Movie.ReleaseDate, "{0:MM/dd/yyyy}", new { @class = "form-control" })
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.GenreId)
@@ -26,6 +27,7 @@
         @Html.TextBoxFor(m => m.Movie.NumberInStock, new { @class = "form-control" })
     </div>
 
+    @Html.HiddenFor(m => m.Movie.Id)
     <button type="submit" class="btn btn-primary">Save</button>
 }
 
